add camera intrinics

--- a/dofbot_ros2_ws/src/ros2_vision_arm_control/CMakeLists.txt
+++ b/dofbot_ros2_ws/src/ros2_vision_arm_control/CMakeLists.txt
@@ -16,6 +16,7 @@ install(
     camera_node.py
     arm_control.py
     yolo_detector.py
+    motion_planner.py
     DESTINATION lib/${PROJECT_NAME}
 )
 
